<?xml version="1.0"?>
<package>
  <name>piper</name>
  <version>0.1.0</version>
  <description>The PIPER package</description>

  <maintainer email="mmukadam3@gatech.edu">mmukadam</maintainer>
  <author email="mmukadam3@gatech.edu">mmukadam</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>libgtsam</build_depend>
  <build_depend>libgpmp2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>libgtsam</run_depend>
  <run_depend>libgpmp2</run_depend>
</package>
